Retailer contact info insert, update and delete done

--- a/WebApp/src/app/features/party/retailerinfo/retailerinfo.component.html
+++ b/WebApp/src/app/features/party/retailerinfo/retailerinfo.component.html
@@ -23,7 +23,7 @@
                                         <label pTooltip="Image" tooltipPosition="top">Image </label>
                                         <div class=" inputWrapper photo-signature align-self-end flex align-items-center ">
                                             <img class="risBtn m-1" [src]="photourllink" style="width: 100px;" alt="">
-                                            <input type="file" formControlName="logo_path" class="fileInput risBtn risAdd " style="width: 100px;" #userImage (change)="onSelectImage($event)">
+                                            <input type="file" formControlName="image_path" class="fileInput risBtn risAdd " style="width: 100px;" #userImage (change)="onSelectImage($event)">
                                         </div>
                                     </div>
                                 </div>
