--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -591,6 +591,8 @@
                             <button pButton pRipple type="button" (click)="showBasicDialogContactNew()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="loadDealerContactinfoToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+
                             <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                                 <p>Do you want to delete this record?</p>
                                 <ng-template pTemplate="footer">
@@ -800,6 +802,8 @@
                             <button pButton pRipple type="button" (click)="showBasicDialogLocationNew()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="loadDealerLocationinfoToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+
                             <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                                 <p>Do you want to delete this record?</p>
                                 <ng-template pTemplate="footer">
@@ -883,6 +887,7 @@
                     </ng-template>
                     <ng-template pTemplate="body" let-dealerinfo let-rowData let-columns="columns">
                         <tr [pSelectableRow]="dealerinfo">
+                            <td hidden>{{dealerinfo.DealerInfoId}}</td>
                             <td>{{dealerinfo.DealerInfoCode}}</td>
                             <td>{{dealerinfo.DealerInfoName}}</td>
                             <td>{{dealerinfo.Mobile}}</td>
