--- a/WebApp/src/app/features/party/retailerinfo/retailerinfo.component.html
+++ b/WebApp/src/app/features/party/retailerinfo/retailerinfo.component.html
@@ -247,8 +247,7 @@
                             <button pButton pRipple type="button" (click)="SaveRetailerinfo()" label="Save" class="risBtn risSave mr-2 mb-2" icon="pi pi-check"></button>
                             <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
                         </div>
-                    </p-tabPanel>
-                    
+                    </p-tabPanel>                    
                     <p-tabPanel header="Contact Info">
                         <div [hidden]="formDisplayContact">
                             <p-tabView [(activeIndex)]="indexContact" (onChange)="functionContact($event)">
@@ -525,6 +524,8 @@
                             <button pButton pRipple type="button" (click)="showBasicDialogContactNew()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="loadRetailerContactinfoToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+
                             <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                                 <p>Do you want to delete this record?</p>
                                 <ng-template pTemplate="footer">
@@ -734,6 +735,8 @@
                             <button pButton pRipple type="button" (click)="showBasicDialogLocationNew()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="loadRetailerLocationinfoToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
                             <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                            <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+
                             <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                                 <p>Do you want to delete this record?</p>
                                 <ng-template pTemplate="footer">
@@ -817,6 +820,7 @@
                     </ng-template>
                     <ng-template pTemplate="body" let-retailerinfo let-rowData let-columns="columns">
                         <tr [pSelectableRow]="retailerinfo">
+                            <td hidden>{{retailerinfo.RetailerInfoId}}</td>
                             <td>{{retailerinfo.RetailerInfoCode}}</td>
                             <td>{{retailerinfo.RetailerInfoName}}</td>
                             <td>{{retailerinfo.Mobile}}</td>
