--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -405,7 +405,7 @@
                                                     <div *ngIf="submittedContact && g.phone.errors" class="invalid-feedback">
                                                         <small *ngIf="g.phone.errors.pattern" class="p-error">Phone number must be 11 digit</small>
                                                     </div>
-                                                </div>                                                
+                                                </div>
                                                 <div class="field col-12 md:col-6">
                                                     <label pTooltip="Email" tooltipPosition="top">Email </label>
                                                     <input type="email" formControlName="email" [ngClass]="{ 'is-invalid': submittedContact && g.email.errors }" placeholder="" pInputText />
@@ -673,7 +673,7 @@
                                                         <small *ngIf="h.mobile.errors.required" class="p-error">Mobile number is required</small>
                                                         <small *ngIf="h.mobile.errors.pattern" class="p-error">Mobile number must be 11 digit</small>
                                                     </div>
-                                                </div>                                             
+                                                </div>
                                                 <div class="field col-12 md:col-6">
                                                     <label pTooltip="Phone" tooltipPosition="top">Phone </label>
                                                     <input type="text" formControlName="phone" [ngClass]="{ 'is-invalid': submittedLocation && h.phone.errors }" placeholder="" pInputText />
@@ -848,6 +848,89 @@
                             <!--end grid display -------------->
                         </div>
                     </p-tabPanel>
+                    <p-tabPanel header="Document Info">
+                       
+                            <form action="" [formGroup]="dealerdocumentForm">
+                                <div class="col-12">
+                                    <div class="p-fluid p-formgrid grid">
+                                        <div class="field col-12 md:col-3">
+                                            <label pTooltip="Document Type" tooltipPosition="top">Document Type</label>                                            
+                                            <p-dropdown [options]="allDocument" formControlName="document_type_id"
+                                                        [ngClass]="{ 'is-invalid': submittedDocument && d.document_type_id.errors }" placeholder="---Select---"
+                                                        optionLabel="document_type_name" [showClear]="true" [filter]="true" filterBy="document_type_name"></p-dropdown>
+
+                                            <div *ngIf="submittedDocument && d.document_type_id.errors" class="invalid-feedback">
+                                                <small *ngIf="d.document_type_id.errors.required" class="p-error">Document Type is required</small>
+                                            </div>
+
+                                        </div>
+                                        <div class="field col-12 md:col-3">
+                                            <label pTooltip="Document Number" tooltipPosition="top">Document Number</label>
+                                            <input type="text" formControlName="document_number" [ngClass]="{ 'is-invalid': submittedDocument && d.document_number.errors }" placeholder="" pInputText />
+                                            <div *ngIf="submittedDocument && d.document_number.errors" class="invalid-feedback">
+                                                <small *ngIf="d.document_number.errors.required" class="p-error">Document Number is required</small>
+                                            </div>
+                                        </div>
+                                        <div class="field col-12 md:col-3">
+                                            <label pTooltip="Issue Date" tooltipPosition="top">Issue Date</label>
+                                            <p-calendar formControlName="issue_date" [ngClass]="{ 'is-invalid': submittedDocument && d.issue_date.errors }" placeholder="" [showIcon]="true" [showButtonBar]="true"></p-calendar>
+                                            <div *ngIf="submittedDocument && d.issue_date.errors" class="invalid-feedback">
+                                                <small *ngIf="d.issue_date.errors.required" class="p-error">Issue date is required</small>
+                                            </div>
+                                        </div>
+                                        <div class="field col-12 md:col-3">
+                                            <label pTooltip="Expiry Date" tooltipPosition="top">Expiry Date</label>
+                                            <p-calendar formControlName="expiry_date" [ngClass]="{ 'is-invalid': submittedDocument && d.expiry_date.errors }" placeholder="" [showIcon]="true" [showButtonBar]="true"></p-calendar>
+                                            <div *ngIf="submittedDocument && d.expiry_date.errors" class="invalid-feedback">
+                                                <small *ngIf="d.expiry_date.errors.required" class="p-error">Expiry date is required</small>
+                                            </div>
+                                        </div>
+                                        <div class="field col-12 md:col-3">
+                                            <input type="file" class="from-control" formControlName="image_file" [ngClass]="{ 'is-invalid': submittedDocument && d.image_file.errors }" placeholder="" pInputText required />
+                                            <div *ngIf="submittedDocument && d.image_file.errors" class="invalid-feedback">
+                                                <small *ngIf="d.image_file.errors.required" class="p-error">Uploaded file is required</small>
+                                            </div>
+                                        </div>
+                                        <div class="field col-12 md:col-1">
+                                            <button pButton pRipple type="button" (click)="SaveDealerDocumentInfo()" label="Add" class="risAdd risSave mr-2 mb-2" icon="pi pi-plus"></button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </form>
+                            <div class="flex justify-content-end pr-2">
+                                <button pButton pRipple type="button" (click)="openPrev()" label="Previous" class="risBtn  mr-2 mb-2" icon="pi pi-step-backward"></button>
+                                <button pButton pRipple type="button" (click)="toggleFormClose()" label="Close" class="risBtn risClose mr-2 mb-2" icon="pi pi-times"></button>
+                            </div>
+                       
+                        <div [hidden]="gridDisplayLocation">
+                            <p-table [value]="dealerdocumentinfoList" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm"  selectionMode="single"
+                                     [(selection)]="selecteddealerdocumentinfo" dataKey="DealerDocumentInfoId"  (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
+                                <ng-template pTemplate="header">
+                                    <tr>
+                                        <th>Document Type</th>
+                                        <th>Document Number</th>
+                                        <th>Issue Date</th>
+                                        <th>Expiry Date</th>
+                                        <th>Uploaded File</th>
+                                    </tr>
+                                </ng-template>
+
+                                <ng-template pTemplate="body" let-dealerdocumentinfo let-rowData let-columns="columns">
+
+                                    <tr [pSelectableRow]="dealerdocumentinfo">
+                                        <td hidden>{{dealerdocumentinfo.DealerInfoId}}</td>
+                                        <td>{{dealerdocumentinfo.DocumentTypeId}}</td>
+                                        <td>{{dealerdocumentinfo.DocumentNumber}}</td>
+                                        <td>{{dealerdocumentinfo.IssueDate}}</td>
+                                        <td>{{dealerdocumentinfo.ExpiryDate}}</td>
+                                        <td>{{dealerdocumentinfo.ImageFile}}</td>
+                                    </tr>
+                                </ng-template>
+
+                            </p-table>
+                            <!--end grid display -------------->
+                        </div>
+                    </p-tabPanel>
                 </p-tabView>
             </div>
             <!--end form display------------->
@@ -857,6 +940,7 @@
                 <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadDealerinfoContactGrid()" label="Contact Info" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadDealerinfoLocationGrid()" label="Location Info" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
+                <button pButton pRipple type="button" (click)="loadDealerinfoDocumentGrid()" label="Document Info" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
 
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
