--- a/WebApp/src/app/features/administrative/association/association.component.html
+++ b/WebApp/src/app/features/administrative/association/association.component.html
@@ -20,7 +20,7 @@
 
                             <div class="field col-12 md:col-6">
                                 <label pTooltip="Organization Type" tooltipPosition="top">Organization Type<span class="req">*</span></label>
-                                <p-dropdown [options]="allCountry" formControlName="organization_type_id_enum"
+                                <p-dropdown [options]="allOrganizationType" formControlName="organization_type_id_enum"
                                             [ngClass]="{ 'is-invalid': submitted && f.organization_type_id_enum.errors }" placeholder="---Select---"
                                             optionLabel="organization_type_name_enum" optionValue="organization_type_id_enum" [showClear]="true" [filter]="true" filterBy="organization_type_name_enum"></p-dropdown>
 
@@ -67,16 +67,8 @@
             <div [hidden]="gridDisplay">
                 <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadassociationToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
-
-
-                <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
-                    <p>Do you want to delete this record?</p>
-                    <ng-template pTemplate="footer">
-                        <button class="pi pi-check risBtn risSave" (click)="deleteAssociationInfo()"> Yes</button>
-                        <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
-                    </ng-template>
-                </p-dialog>
+                <button pButton pRipple type="button" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2" (click)="deleteModal($event)"> </button>
+                <p-confirmPopup key="delete"></p-confirmPopup>
 
 
                 <p-table [value]="associations" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
