--- a/WebApp/src/app/features/administrative/bank-branch/bank-branch.component.html
+++ b/WebApp/src/app/features/administrative/bank-branch/bank-branch.component.html
@@ -165,7 +165,8 @@
             <div [hidden]="gridDisplay">
                 <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadBankBranchToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
+                <button pButton pRipple type="button" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2" (click)="deleteModal($event)"> </button>
+                <p-confirmPopup key="delete"></p-confirmPopup>
 
                 <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
                     <p>Do you want to delete this record?</p>
@@ -177,30 +178,30 @@
 
                 <p-table [value]="bankBranchs" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
                          [(selection)]="selectedBankBranch" dataKey="BankBranchId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th>Branch Name</th>
-                                <th>Bank Name</th>
-                                <th>Routing</th>
-                                <th>Country</th>
-                                <th>Division</th>
-                                <th>District</th>
-                                <th>Remarks</th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-bankBranch>
-                            <tr [pSelectableRow]="bankBranch">
-                                <td>{{bankBranch.BankBranchName}}</td>
-                                <td>{{bankBranch.BankName}}</td>
-                                <td>{{bankBranch.BankBranchRouting}}</td>
-                                <td>{{bankBranch.CountryName}}</td>
-                                <td>{{bankBranch.DivisionName}}</td>
-                                <td>{{bankBranch.DistrictName}}</td>
-                                <td>{{bankBranch.Remarks}}</td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                    <!--end grid display -------------->
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Branch Name</th>
+                            <th>Bank Name</th>
+                            <th>Routing</th>
+                            <th>Country</th>
+                            <th>Division</th>
+                            <th>District</th>
+                            <th>Remarks</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-bankBranch>
+                        <tr [pSelectableRow]="bankBranch">
+                            <td>{{bankBranch.BankBranchName}}</td>
+                            <td>{{bankBranch.BankName}}</td>
+                            <td>{{bankBranch.BankBranchRouting}}</td>
+                            <td>{{bankBranch.CountryName}}</td>
+                            <td>{{bankBranch.DivisionName}}</td>
+                            <td>{{bankBranch.DistrictName}}</td>
+                            <td>{{bankBranch.Remarks}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+                <!--end grid display -------------->
             </div>
         </div>
     </div>
