--- a/WebApp/src/app/features/administrative/bank/bank.component.html
+++ b/WebApp/src/app/features/administrative/bank/bank.component.html
@@ -161,41 +161,35 @@
 
                 <button pButton pRipple type="button" (click)="showBasicDialog()" label="New" icon="pi pi-plus" class="risBtn risAdd mr-2 mb-2"></button>
                 <button pButton pRipple type="button" (click)="loadBankToEdit()" label="Edit" icon="pi pi-pencil" class="risBtn risEdit mr-2 mb-2"></button>
-                <button pButton pRipple type="button" (click)="showDialog()" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2"></button>
-                <p-dialog header="Delete Record" [(visible)]="display" [style]="{width: '35vw'}">
-                    <p>Do you want to delete this record?</p>
-                    <ng-template pTemplate="footer">
-                        <button class="pi pi-times risBtn risClose" (click)="display=false"> No</button>
-                        <button class="pi pi-check risBtn risSave" (click)="deleteBankInfo()"> Yes</button>
-                    </ng-template>
-                </p-dialog>
+                <button pButton pRipple type="button" label="Delete" icon="pi pi-trash" class="risBtn risDelete mr-2 mb-2" (click)="deleteModal($event)"> </button>
+                <p-confirmPopup key="delete"></p-confirmPopup>
 
                 <p-table [value]="banks" styleClass="p-datatable-striped p-datatable-gridlines p-datatable-sm" [paginator]="true" [rows]="10" selectionMode="single" [showCurrentPageReport]="true" responsiveLayout="scroll"
                          [(selection)]="selectedBank" dataKey="BankId" currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [rowsPerPageOptions]="[10,25,50]" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
-                        <ng-template pTemplate="header">
-                            <tr>
-                                <th>Name</th>
-                                <th>Short Name</th>
-                                <th>Swift Code</th>
-                                <th>Country</th>
-                                <th>Division</th>
-                                <th>District</th>
-                                <th>Remarks</th>
-                            </tr>
-                        </ng-template>
-                        <ng-template pTemplate="body" let-bank>
-                            <tr [pSelectableRow]="bank">
-                                <td>{{bank.BankName}}</td>
-                                <td>{{bank.BankShortName}}</td>
-                                <td>{{bank.BankSwiftCode}}</td>
-                                <td>{{bank.CountryName}}</td>
-                                <td>{{bank.DivisionName}}</td>
-                                <td>{{bank.DistrictName}}</td>
-                                <td>{{bank.Remarks}}</td>
-                            </tr>
-                        </ng-template>
-                    </p-table>
-                    <!--end grid display -------------->
+                    <ng-template pTemplate="header">
+                        <tr>
+                            <th>Name</th>
+                            <th>Short Name</th>
+                            <th>Swift Code</th>
+                            <th>Country</th>
+                            <th>Division</th>
+                            <th>District</th>
+                            <th>Remarks</th>
+                        </tr>
+                    </ng-template>
+                    <ng-template pTemplate="body" let-bank>
+                        <tr [pSelectableRow]="bank">
+                            <td>{{bank.BankName}}</td>
+                            <td>{{bank.BankShortName}}</td>
+                            <td>{{bank.BankSwiftCode}}</td>
+                            <td>{{bank.CountryName}}</td>
+                            <td>{{bank.DivisionName}}</td>
+                            <td>{{bank.DistrictName}}</td>
+                            <td>{{bank.Remarks}}</td>
+                        </tr>
+                    </ng-template>
+                </p-table>
+                <!--end grid display -------------->
             </div>
         </div>
     </div>
